--- a/tribune/news/templates/all-news/today-news.html
+++ b/tribune/news/templates/all-news/today-news.html
@@ -5,13 +5,16 @@
 
 <div class="container">
 
+  <!-- <a href="/admin">admin</a>
+  <a href="/article/2">article2</a> -->
+
   <!-- Looping through news   -->
   {% for news_item in news %}
 
   <div class="row">
     <!-- displaying News articles -->
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <h2 class="text-center"> {{ news_item.title }} </h2>
+      <h2 class="text-center"> <a href="{% url 'article' news_item.id %}">{{ news_item.title }}</a> </h2>
     </div>
     <!--Display news Article images  -->
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
