--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,6 +1,6 @@
 {%extends 'all-news/base.html'%}
 {% load bootstrap3 %}
-
+{% load static %}
 {% block content %}
 {{block.super}}
 
@@ -41,6 +41,7 @@
 
 </div>
 {% endblock %}
+<!--End of the block content-->
 {% block scripts %} {{block.super}}
   <script type="text/javascript" src="{%static 'js/newsletter.js'%}"></script>
 {% endblock %}
